Tetromino : add tests for ctor, rotation, movement and relativeGetter

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,6 +9,7 @@ project(tetris_test)
 set(TEST_SOURCES
         testMain.cpp
         Position.cpp
+        Tetromino.cpp
 )
 
 # Create the tests main executable
