adapting to added methods

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -8,6 +8,9 @@ set(SOURCES
         Direction.cpp
         Position.cpp
         Tetromino.cpp
+        Bag.cpp
+        Board.cpp
+        Game.cpp
 )
 
 # Create the model library that public can use
