Board : Add some tests (need fix)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,6 +9,7 @@ project(tetris_test)
 set(TEST_SOURCES
         testMain.cpp
         Bag.cpp
+        Board.cpp
         Position.cpp
         Tetromino.cpp
 )
