--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,6 +10,7 @@ set(TEST_SOURCES
         testMain.cpp
         Position.cpp
         Tetromino.cpp
+        BagViewTest.cpp
 )
 
 # Create the tests main executable
@@ -31,6 +32,7 @@ target_link_libraries(
         GTest::gtest
         GTest::gtest_main
         tetris_model
+        tetris_view
 )
 
 # Discover tests using Google Test
