add BoardView and test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,6 +11,7 @@ set(TEST_SOURCES
         Position.cpp
         Tetromino.cpp
         BagViewTest.cpp
+        BoardViewTest.cpp
 )
 
 # Create the tests main executable
