Change CMake structure to allow link over libraries

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -12,7 +12,7 @@ set(SOURCES
 )
 
 # Create the model library that public can use
-add_library(${PROJECT_NAME} SHARED ${SOURCES})
+add_library(${PROJECT_NAME} STATIC ${SOURCES})
 
 # Include the headers folder for linker
 # Note : If needed, we can split headers declaration in multiple child folder in the include folder.
