--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES
         Tetromino.cpp
         Bag.cpp
         Board.cpp
+        Game.cpp
 )
 
 # Create the model library that public can use
