--- a/src/view/CMakeLists.txt
+++ b/src/view/CMakeLists.txt
@@ -8,11 +8,10 @@ set(SOURCES
         BagView.cpp
         BoardView.cpp
         GameView.cpp
-        observable.cpp
 )
 
 # Create the model library that public can use
-add_library(${PROJECT_NAME} SHARED ${SOURCES})
+add_library(${PROJECT_NAME} STATIC ${SOURCES})
 
 # Include the headers folder for linker
 # Note : If needed, we can split headers declaration in multiple child folder in the include folder.
