One class for one command

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,13 @@ add_subdirectory(tools)
 
 # Create the main executable
 add_executable(${PROJECT_NAME} main.cpp
-        controller/Invoker.cpp)
+        controller/Invoker.cpp
+        controller/MoveDownCommand.cpp
+        controller/MoveLeftCommand.cpp
+        controller/MoveRightCommand.cpp
+        controller/RotateClockwiseCommand.cpp
+        controller/RotateCounterClockwise.cpp
+        controller/DropCommand.cpp)
 
 # Link each sub project to compile the executable
 target_link_libraries(
