--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ set(CMAKE_CXX_FLAGS "-Wall -pedantic-errors")
 # Include subdirectories for source and test
 add_subdirectory(src)
 add_subdirectory(test)
+add_subdirectory(documentation)
