Fix Cmake to add controller package

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,16 +7,10 @@ project(tetris)
 add_subdirectory(model)
 add_subdirectory(view)
 add_subdirectory(tools)
+add_subdirectory(controller)
 
 # Create the main executable
-add_executable(${PROJECT_NAME} main.cpp
-        controller/Invoker.cpp
-        controller/MoveDownCommand.cpp
-        controller/MoveLeftCommand.cpp
-        controller/MoveRightCommand.cpp
-        controller/RotateClockwiseCommand.cpp
-        controller/RotateCounterClockwise.cpp
-        controller/DropCommand.cpp)
+add_executable(${PROJECT_NAME} main.cpp)
 
 # Link each sub project to compile the executable
 target_link_libraries(
@@ -24,4 +18,5 @@ target_link_libraries(
         tetris_model
         tetris_view
         tetris_tools
+        tetris_controller
 )
