Game : test & fix
Add gameOver getter and drop add new tetro

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,6 +10,7 @@ set(TEST_SOURCES
         testMain.cpp
         Bag.cpp
         Board.cpp
+        Game.cpp
         Position.cpp
         Tetromino.cpp
         # MoveCommandTest.cpp
