Update cmake and main

--- a/src/controller/CMakeLists.txt
+++ b/src/controller/CMakeLists.txt
@@ -12,6 +12,10 @@ set(SOURCES
         MoveRightCommand.cpp
         RotateClockwiseCommand.cpp
         RotateCounterClockwise.cpp
+        ApplicationTetris.cpp
+        StartGameCommand.cpp
+        RestartGameCommand.cpp
+        QuiteGameCommand.cpp
 )
 
 # Create the model library that public can use
