Add settings menu + fix display

--- a/src/controller/CMakeLists.txt
+++ b/src/controller/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SOURCES
         StartGameCommand.cpp
         RestartGameCommand.cpp
         QuitGameCommand.cpp
+        SettingsGameCommand.cpp
 )
 
 # Create the model library that public can use
