Configure repo to build Qt6 App

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,13 @@ target_link_libraries(
         ${PROJECT_NAME} PRIVATE
         tetris_controller
         tetris_model
-        tetris_view
+        tetris_view_console
         tetris_tools
 )
+
+# Link Qt View App library to compile the executable only if found
+if (DEFINED Qt6Widgets_FOUND AND DEFINED Qt6Core_FOUND)
+    target_link_libraries(
+            ${PROJECT_NAME} PRIVATE tetris_view_qtApp
+    )
+endif ()
