First version with nextTetro preview

--- a/src/view/qtApp/CMakeLists.txt
+++ b/src/view/qtApp/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES
         BoardBox.cpp
         InfoBox.cpp
         TetrisQtGUI.cpp
+        nextTetroWidget.cpp
 )
 
 # Find Qt6 components, suppressing warnings
