Add Configuration & GameOver

--- a/src/view/qtApp/CMakeLists.txt
+++ b/src/view/qtApp/CMakeLists.txt
@@ -12,6 +12,8 @@ set(SOURCES
         InfoBox.cpp
         TetrisQtGUI.cpp
         nextTetroWidget.cpp
+        tetrisConfiguration.cpp
+        tetrisGameOver.cpp
 )
 
 # Find Qt6 components, suppressing warnings
