Create color animation to switch color

--- a/src/view/qtApp/CMakeLists.txt
+++ b/src/view/qtApp/CMakeLists.txt
@@ -9,6 +9,7 @@ project(tetris_view_qtApp)
 set(SOURCES
         TetrisView.cpp
         BoardBox.cpp
+        ColorAnimation.cpp
         InfoBox.cpp
         TetrisQtGUI.cpp
         nextTetroWidget.cpp
