Totally refactor BoardBox to simplify it

--- a/src/view/qtApp/CMakeLists.txt
+++ b/src/view/qtApp/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SOURCES
         ColorAnimation.cpp
         InfoBox.cpp
         TetrisQtGUI.cpp
+        TetroView.cpp
         nextTetroWidget.cpp
         tetrisConfiguration.cpp
         tetrisGameOver.cpp
