--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -19,9 +19,9 @@ jobs:
           - os: macos-latest
             cxx: clang++
             cc: clang
-          - os: windows-latest
-            cxx: cl
-            cc: cl
+          #- os: windows-latest
+          #  cxx: cl
+          #  cc: cl
 
     steps:
     - uses: actions/checkout@v2
@@ -38,14 +38,14 @@ jobs:
         brew install boost qt
         echo 'export PATH="/usr/local/opt/qt/bin:$PATH"' >> $GITHUB_ENV
 
-    - name: Install dependencies (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
-        choco install qt6-base-dev -y
-        choco install visualstudio2019buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended --includeOptional" -y
-        $qtPath = Get-ChildItem 'C:\Qt\6*\msvc*\bin' | Sort-Object Name | Select-Object -Last 1
-        echo "$qtPath" >> $GITHUB_PATH
+    #- name: Install dependencies (Windows)
+    #  if: matrix.os == 'windows-latest'
+    #  run: |
+    #    choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
+    #    choco install qt6-base-dev -y
+    #    choco install visualstudio2019buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended --includeOptional" -y
+    #    $qtPath = Get-ChildItem 'C:\Qt\6*\msvc*\bin' | Sort-Object Name | Select-Object -Last 1
+    #    echo "$qtPath" >> $GITHUB_PATH
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{github.workspace}}/build
@@ -62,3 +62,19 @@ jobs:
       working-directory: ${{github.workspace}}/build
       shell: bash
       run: ctest -C Release
+
+    - name: Package artifacts
+      if: success()
+      run: |
+        cd ${{github.workspace}}/build
+        zip -r tetris-${{ matrix.os }}.zip .
+
+    - name: Publish Release
+      if: success()
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          ${{github.workspace}}/build/tetris-${{ matrix.os }}.zip
+        token: ${{ secrets.GITHUB_TOKEN }}
+        release_name: "Tetris"
+        body: "$(date +%Y-%m-%d)"
