--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -69,10 +69,22 @@ jobs:
         cd ${{ github.workspace }}/build
         zip -r tetris-${{ matrix.os }}.zip .
 
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body: N/A
+        draft: false
+        prerelease: false
+
     - name: Upload to Release Action
       uses: actions/upload-release-asset@v1
       with:
-        upload_url: ${{ github.event.release.upload_url }}
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ${{ github.workspace }}/build/tetris-${{ matrix.os }}.zip
         asset_name: tetris-${{ matrix.os }}.zip
         asset_content_type: application/zip
